packages/forge-dsl/fixtures/errors/e23-bad-decl.fable
// expect: FORGE103
VAR hunger

-> go
=== go ===
Onward.
-> END
